--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -2,7 +2,7 @@
 <html lang="en-gb">
 <head>
     <meta charset="utf-8">
-    <title>{% block title %}Sims Tracker | {{ title }}{% endblock %}</title>
+    <title>{% block title %}Sims Tracker{% endblock %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -32,29 +32,15 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="../">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">How to use</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Support</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Community</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Login or register</a>
-                </li>
-            </ul>
+            {{ knp_menu_render('AppBundle:Builder:mainMenu', {'currentClass': 'active', 'template': 'knp_menu.html.twig'}) }}
+            {{ knp_menu_render('AppBundle:Builder:userMenu', {'currentClass': 'active', 'template': 'knp_menu.html.twig'}) }}
             <form class="form-inline mt-2 mt-md-0">
                 <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
                 <button class="btn btn-success my-2 my-sm-0" type="submit">Search</button>
             </form>
         </div>
     </nav>
+
     {% endblock %}
 </header>
 
